created layouts for login & signup handlebars

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,26 +1,27 @@
 <div class="row justify-content-center">
-  <div class="col-6">
 
-<form class="form login-form">
+  <div class="col-6">
+      <h3>Login</h3>
+<form class="login-form">
   <!-- Email input -->
   <div class="form-outline mb-4">
     <input type="email" id="username-login" class="form-control" />
-    <label class="form-label" for="form2Example2">Username</label>
+    <label class="form-input" for="username-login">Username</label>
   </div>
 
   <!-- Password input -->
   <div class="form-outline mb-4">
     <input type="password" id="password-login" class="form-control" />
-    <label class="form-label" for="form2Example2">Password</label>
+    <label class="form-input" for="password-login">Password</label>
   </div>
 
 
   <!-- Submit button -->
-  <button type="button" class="btn btn-dark btn-block mb-4">Login</button>
+  <button type="submit" class="btn btn-dark btn-block mb-4">Login</button>
 
   <!-- Register buttons -->
   <div class="text-center">
-    <p>Don't have an account? <a href="">Signup</a></p>
+    <p>Don't have an account? <a href="/signup">Signup</a></p>
   </div>
 </form>
 
