--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -2,9 +2,9 @@
 <div class="row mb-4 project">
   <div class="col-md-5">
     <h2>
-      <a href="/post/{{post.id}}">{{post.title}}</a>
+      <a class="post-title text-uppercase" href="/post/{{post.id}}">{{post.title}}</a>
     </h2>
-    <p>Created by {{post.user_id.username}} on {{format_date post.date_created}}</p>
+    <p>Created by {{post.user.username}} on {{format_date post.date_created}}</p>
   </div>
   <div class="col-md-7">
     <p>
