fixed routes errors, styled views

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -6,7 +6,7 @@
   <!-- Email input -->
   <div class="form-outline mb-4">
     <input type="email" id="username-login" class="form-control" />
-    <label class="form-input" for="username-login">Username</label>
+    <label class="form-input" for="username-login">Email</label>
   </div>
 
   <!-- Password input -->
