--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -11,8 +11,8 @@
 
   <!-- Email input -->
   <div class="form-outline mb-4">
-    <input type="email" id="email-signup" class="form-control" />
-    <label class="form-input" for="email-signup">Username</label>
+    <input type="email" id="username-signup" class="form-control" />
+    <label class="form-input" for="username-signup">Email</label>
   </div>
 
   <!-- Password input -->
