--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,8 +1,9 @@
+
 {{#each posts as |post| }}
-<div class="row mb-4 project">
-  <div class="col-md-5">
+<div class="row mb-4 posts">
+  <div class="col-md-6">
     <h2>
-      <a class="post-title text-uppercase" href="/post/{{post.id}}">{{post.title}}</a>
+      <a href="/post/{{post.id}}">{{post.title}}</a>
     </h2>
     <p>Created by {{post.user.username}} on {{format_date post.date_created}}</p>
   </div>
@@ -10,6 +11,8 @@
     <p>
       {{post.description}}
     </p>
+    <hr class="hr" />
   </div>
 </div>
 {{/each}}
+
