--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -25,10 +25,13 @@
                     <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
                     {{#if logged_in}}
                     <li class="nav-item"><a class="nav-link" href="/dashboard">Dashboard</a></li>
-                    <button class="no-button" id="logout">logout</button>
-                     {{else}}
+                    {{!-- <button class="no-button" id="logout">logout</button> --}}
+                    <li class="no-button"><a class="nav-link" href="/logout">Logout</a></li>
+                    {{else}}
                     <li class="nav-item"><a class="nav-link" href="/login">Login</a></li>
                     {{/if}}
+
+
                 </ul>
             </div>
         </div>
