--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -1,24 +1,25 @@
 <div class="text">
   <h2>{{title}}</h2>
+  <h5>Created by {{user.username}} on {{format_date date_created}}</h5>
   <p>{{description}}</p>
-  <p>Created by {{user.username}} on {{format_date date_created}}</p> <!--changed user.name to user.username -->
-<div>
+
 <div>
 {{#if logged_in}}
 <form class="new-comment-form" data-postid={{id}}>
+    <div class="form-outline mb-4">
+      <textarea class="form-control" id="textAreaExample" rows="4" placeholder="Comment"></textarea>
+    </div>
   <div>
-    <textarea class="ml-5" id='comment_description' name="comment-body"></textarea>
-  </div>
-  <div>
-    <button class="button is-warning ml-5 mb-5" type="submit">Add Comment</button>
+      <button type="submit" class="btn btn-dark btn-block mb-4">Add Comment</button>
   </div>
 </form>
+  <h5>Comments:</h5>
 {{/if}}
 </div>
  {{#each comments as |comment|}}
- <div style="border-style: solid;">
+ <div style="border-style: none;">
  <p>{{comment.comment_text}}</p>
  </div>
  {{/each}}
-
+    <hr class="hr" />
  <script src="/js/comments.js"></script>
