--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -26,7 +26,7 @@
                     {{#if logged_in}}
                     <li class="nav-item"><a class="nav-link" href="/dashboard">Dashboard</a></li>
                     {{!-- <button class="no-button" id="logout">logout</button> --}}
-                    <li class="no-button"><a class="nav-link" href="/logout">Logout</a></li>
+                    <li class="no-button"><a class="nav-link" id="logout" href="/logout">Logout</a></li>
                     {{else}}
                     <li class="nav-item"><a class="nav-link" href="/login">Login</a></li>
                     {{/if}}
